[package]
name = "unigen"
version = "0.1.0"
authors = ["AB <ab@hexor.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
unigen_lib = { path = "../lib" }